# SideCookAI

./: main.py  pyproject.toml  render.yaml  wsgi.py
.postman/: resources.yaml
data/: recipes.csv
index/: recipes_meta.json
postman/collections/Recipe Finder/: Root.request.yaml
postman/collections/Recipe Finder/.resources/: definition.yaml
postman/collections/Recipe Finder/Auth/: Get Login Page.request.yaml  LOCALHOST-login POST.request.yaml  Login.request.yaml  Logout.request.yaml
postman/collections/Recipe Finder/Search/: Get Search Page.request.yaml  LOCALHOST-search POST.request.yaml  Search Recipes.request.yaml
src/enums/: units_volume.py
src/models/: Ingredient.py  Quantity.py  Unit.py
templates/: login.html
