[project]
name = "side-cook-ai"
version = "0.1.0"
requires-python = "==3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[all]",
    "starlette[full]>=1.0.0",
    "anyio>=4.13.0",
    "certifi>=2026.2.25",
    "dotenv>=0.9.9",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "pydantic",
    "annotated-doc",
    "scipy",
    "pandas",
    "numpy",
    "faiss-cpu",
    "sentence-transformers",
    "uvicorn[standard]",
    "gunicorn",
    "asgiref",
    "httptools",
    "fcntl"
]
